base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-nest-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-nest-app
  template:
    metadata:
      labels:
        app: mi-nest-app
    spec:
      containers:
        - name: mi-nest-app
          image: node:18-alpine # Será reemplazada en overlays
          ports:
            - containerPort: 3001
