base/service-react.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-react-app
spec:
  selector:
    app: mi-react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
