base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-nest-app
spec:
  selector:
    app: mi-nest-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
